--- a/WpfApp/App.config
+++ b/WpfApp/App.config
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="WpfApp.Properties.Settings.ForWPFAppConnectionString"
+            connectionString="Data Source=MARIAZHUKOVA\MYLOCALBASE;Initial Catalog=ForWPFApp;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="WpfApp.Properties.Settings.ForWPFappConnectionString1"
+            connectionString="Data Source=MARIAZHUKOVA\SQLEXPRESS;Initial Catalog=ForWPFapp;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
 </configuration>
