--- a/StarWars/StarWars.csproj
+++ b/StarWars/StarWars.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Direction.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="ICollision.cs" />
+    <Compile Include="MedicalKit.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -60,6 +61,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Ship.cs" />
     <Compile Include="Star.cs" />
   </ItemGroup>
   <ItemGroup>
