--- a/buffetTest/Algoritms.csproj
+++ b/buffetTest/Algoritms.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinarySearchTree.cs" />
     <Compile Include="GoogleQuestions.cs" />
     <Compile Include="HashTable.cs" />
     <Compile Include="MyDoublyLinkedList.cs" />
