--- a/buffetTest/Algoritms.csproj
+++ b/buffetTest/Algoritms.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinarySearchTree.cs" />
+    <Compile Include="DynamicProgramming.cs" />
     <Compile Include="Extensions\SortingExtensions.cs" />
     <Compile Include="GoogleQuestions.cs" />
     <Compile Include="HashTable.cs" />
@@ -63,7 +64,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ArraysAlgoritms.cs" />
     <Compile Include="Recursion.cs" />
+    <Compile Include="Search.cs" />
     <Compile Include="Sorting.cs" />
+    <Compile Include="Tasks.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
