--- a/UnitTestForAlgoritmTasks/UnitTestForAlgoritmTasks.csproj
+++ b/UnitTestForAlgoritmTasks/UnitTestForAlgoritmTasks.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\buffetTest\Algoritms.csproj">
+      <Project>{EDBB4936-9DBB-4827-9E39-85ADCABD47FD}</Project>
+      <Name>Algoritms</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
